bumped axis header labels up 12px to avoid tick overlap

--- a/css/dygraph.css
+++ b/css/dygraph.css
@@ -82,7 +82,7 @@
 }
 
 .dygraph-axis-header {
-  top: -10px;
+  top: -22px;
   position: absolute;
   text-align: center;
   border-radius: 2px;
